feat:got pagination to work!

--- a/wholeBrain/_chapters/01-ch1.md
+++ b/wholeBrain/_chapters/01-ch1.md
@@ -1,7 +1,9 @@
 ---
-title: "Chapter 1: Parenting with the Brain in Mind"
-weight: 1
+layout: chapter        # <‑‑ use the new chapter layout
+title: "Chapter 1 – Parenting with the Brain in Mind"
+weight: 1              # field used for sorting in chapters.md
+quiz_id: ch1           # tells the layout which quiz to pull
 ---
 
-## Key Concept: Left vs. Right Brain
+## Key Concept: Left vs. Right Brain
 The left brain loves **logic**, while the right brain handles **emotions**.
