--- a/wholeBrain/_chapters/02-ch2.md
+++ b/wholeBrain/_chapters/02-ch2.md
@@ -1,6 +1,6 @@
 ---
+layout: chapter        # <‑‑ use the new chapter layout
 title: "Chapter 2: Connect and Redirect"
-weight: 2
+weight: 2              # field used for sorting in chapters.md
+quiz_id: ch2           # tells the layout which quiz to pull
 ---
-
-{% include quiz.html id="ch2" %}
