added quiz functionality

--- a/wholeBrain/_chapters/01-ch1.md
+++ b/wholeBrain/_chapters/01-ch1.md
@@ -1,9 +1,28 @@
 ---
-layout: chapter        # <‑‑ use the new chapter layout
-title: "Chapter 1 – Parenting with the Brain in Mind"
-weight: 1              # field used for sorting in chapters.md
-quiz_id: ch1           # tells the layout which quiz to pull
+layout: chapter
+title:  "Chapter 1 – Parenting with the Brain in Mind"
+weight: 1
 ---
 
-## Key Concept: Left vs. Right Brain
+## Key Concept: Left vs Right Brain
 The left brain loves **logic**, while the right brain handles **emotions**.
+
+---
+
+### Checkpoint 1  
+{% include quiz.html id="ch1_q1" %}   <!-- quiz right here -->
+
+---
+
+## The Upstairs / Downstairs Brain
+Your child's “downstairs brain” is responsible for fight‑or‑flight reactions,
+while the “upstairs brain” plans, reasons, and shows empathy.
+
+---
+
+### Checkpoint 2  
+{% include quiz.html id="ch1_q2" %}   <!-- another quiz here -->
+
+---
+
+Continue the chapter as normal…
