--- a/wholeBrain/_chapters/02-ch2.md
+++ b/wholeBrain/_chapters/02-ch2.md
@@ -1,6 +1,10 @@
 ---
 layout: chapter        # <‑‑ use the new chapter layout
-title: "Chapter 2: Connect and Redirect"
+title: "Chapter 2 - TWO BRAINS ARE BETTER THAN ONE:"
 weight: 2              # field used for sorting in chapters.md
 quiz_id: ch2           # tells the layout which quiz to pull
 ---
+
+### Whole-Brain Strategy #1: Connect and Redirect: Surfing Emotional Waves
+
+### Whole-Brain Strategy #2: Name It to Tame It: Telling Stories to Calm Big Emotions
