working on the psych book first to get template finished

--- a/chickenGuide/_chapters/00-ch0.md
+++ b/chickenGuide/_chapters/00-ch0.md
@@ -7,268 +7,15 @@ quiz_id: ch0           # tells the layout which quiz to pull
 
 ### INTRODUCTION:
 
-![YOO](../../assets/images/hen.png)
+<img src="../../assets/images/hen.png" style="width: 100px;" alt="Description of image">
 
 #### Survive and Thrive:
+With your chickens
 
+### Quiz:
 
+fkldjgkdfkjlgjkldfj
 
-You’ve had those days, right? When the sleep deprivation, the
-muddy cleats, the peanut butter on the new jacket, the
-homework battles, the Play-Doh in your computer keyboard,
-and the refrains of “She started it!” leave you counting the
-minutes until bedtime. On these days, when you (again?!!)
-have to pry a raisin from a nostril, it seems like the most you
-can hope for is to survive.
-However, when it comes to your children, you’re aiming a lot
-higher than mere survival. Of course you want to get through
-those difficult tantrum-in-the-restaurant moments. But
-whether you’re a parent or other committed caregiver in a
-child’s life, your ultimate goal is to raise kids in a way that
-lets them thrive. You want them to enjoy meaningful
-relationships, be caring and compassionate, do well in school,
-work hard and be responsible, and feel good about who they
-are.
-Survive. Thrive.
-We’ve met with thousands of parents over the years. When
-we ask them what matters most to them, versions of these two
-goals almost always top the list. They want to survive
-difficult parenting moments, and they want their kids and
-their family to thrive. As parents ourselves, we share these
-same goals for our own families. In our nobler, calmer, saner
-moments, we care about nurturing our kids’ minds, increasing
-their sense of wonder, and helping them reach their potential
-in all aspects of life. But in the more frantic, stressful,
-bribe-the-toddler-into-the-car-seat-so-we-can-rush-to-the-soccer-game moments, sometimes all we can hope for is to avoid yelling or
-hearing someone say, “You’re so mean!”
+{% include quiz.html id=page.quiz_id %}
 
-Take a moment and ask yourself: What do you really want for
-your children? What qualities do you hope they develop and
-take into their adult lives? Most likely you want them to be
-happy, independent, and successful. You want them to enjoy
-fulfilling relationships and live a life full of meaning and
-purpose. Now think about what percentage of your time you
-spend intentionally developing these qualities in your
-children. If you’re like most parents, you worry that you
-spend too much time just trying to get through the day (and
-sometimes the next five minutes) and not enough time
-creating experiences that help your children thrive, both today
-and in the future.
-
-You might even measure yourself against some sort of perfect
-parent who never struggles to survive, who seemingly spends
-every waking second helping her children thrive. You know,
-the PTA president who cooks organic, well-balanced meals
-while reading to her kids in Latin about the importance of
-helping others, then escorts them to the art museum in the
-hybrid that plays classical music and mists lavender
-aromatherapy through the air-conditioning vents. None of us
-can match up to this imaginary superparent. Especially when
-we feel like a large percentage of our days are spent in
-full-blown survival mode, where we find ourselves wild-eyed
-and red-faced at the end of a birthday party, shouting, “If
-there’s one more argument over that bow and arrow,
-nobody’s getting any presents!”
-
-If any of this sounds familiar, we’ve got great news for you:
-the moments you are just trying to survive are actually
-opportunities to help your child thrive. At times you may feel that the loving, important moments (like having a meaningful
-conversation about compassion or character) are separate
-from the parenting challenges (like fighting another
-homework battle or dealing with another meltdown). But they
-are not separate at all. When your child is disrespectful and
-talks back to you, when you are asked to come in for a
-meeting with the principal, when you find crayon scribbles all
-over your wall: these are survive moments, no question about
-it. But at the same time, they are opportunities—even
-gifts—because a survive moment is also a thrive moment,
-where the important, meaningful work of parenting takes
-place.
-
-For example, think about a situation you often just try to get
-through. Maybe when your kids are fighting with each other
-for the third time within three minutes. (Not too hard to
-imagine, is it?) Instead of just breaking up the fight and
-sending the sparring siblings to different rooms, you can use
-the argument as an opportunity for teaching: about reflective
-listening and hearing another person’s point of view; about
-clearly and respectfully communicating your own desires;
-about compromise, sacrifice, negotiation, and forgiveness.
-We know: it sounds hard to imagine in the heat of the
-moment. But when you understand a little bit about your
-children’s emotional needs and mental states, you can create
-this kind of positive outcome—even without United Nations
-peacekeeping forces.
-There’s nothing wrong with separating your kids when
-they’re fighting. It’s a good survival technique, and in certain
-situations it may be the best solution. But often we can do
-better than just ending the conflict and noise. We can
-transform the experience into one that develops not only each child’s brain but also her relationship skills and her character.
-Over time, the siblings will each continue to grow and
-become more proficient at handling conflict without parental
-guidance. This will be just one of the many ways you can
-help them thrive.
-
-What’s great about this survive-and-thrive approach is that
-you don’t have to try to carve out special time to help your
-children thrive. You can use all of the interactions you
-share—the stressful, angry ones as well as the miraculous,
-adorable ones—as opportunities to help them become the
-responsible, caring, capable people you want them to be.
-That’s what this book is about: using those everyday
-moments with your kids to help them reach their true
-potential. The following pages offer an antidote to parenting
-and academic approaches that overemphasize achievement
-and perfection at any cost. We’ll focus instead on ways you
-can help your kids be more themselves, more at ease in the
-world, filled with more resilience and strength. How do you
-do that? Our answer is simple: you need to understand some
-basics about the young brain that you are helping to grow and
-develop. That’s what The Whole-Brain Child is all about.
-HOW TO USE THIS BOOK
-Whether you’re a parent, grandparent, teacher, therapist, or
-other significant caregiver in a child’s life, we’ve written this
-book for you. We’ll use the word “parent” throughout, but
-we’re talking to anyone doing the crucial work of raising,
-supporting, and nurturing kids. Our goal is to teach you how
-to use your everyday interactions as opportunities to help you
-and the children you care for both survive and thrive. Though
-much of what you’ll read can be creatively tailored for
-teens—in fact, we plan to write a follow-up that does just that—this book focuses on the years from birth to twelve,
-centering especially on toddlers, school-age kids, and
-preteens.
-
-In the following pages we explain the whole-brain perspective
-and give you a variety of strategies to help your children be
-happier, healthier, and more fully themselves. The first
-chapter presents the concept of parenting with the brain in
-mind and introduces the simple and powerful concept at the
-heart of the whole-brain approach, integration. Chapter 2
-focuses on helping a child’s left brain and right brain work
-together so the child can be connected to both his logical and
-emotional selves. Chapter 3 emphasizes the importance of
-connecting the instinctual “downstairs brain” with the more
-thoughtful “upstairs brain,” which is responsible for decision
-making, personal insight, empathy, and morality. Chapter 4
-explains how you can help your child deal with painful
-moments from the past by shining the light of understanding
-on them, so they can be addressed in a gentle, conscious, and
-intentional way. Chapter 5 helps you teach your kids that they
-have the capacity to pause and reflect on their own state of
-mind. When they can do that, they can make choices that give
-them control over how they feel and how they respond to
-their world. Chapter 6 highlights ways you can teach your
-children about the happiness and fulfillment that result from
-being connected to others, while still maintaining a unique
-identity.
-A clear understanding of these different aspects of the
-whole-brain approach will allow you to view parenting in a
-whole new way. As parents, we are wired to try to save our
-children from any harm and hurt, but ultimately we can’t.
-They’ll fall down, they’ll get their feelings hurt, and they’ll get scared and sad and angry. Actually, it’s often these
-difficult experiences that allow them to grow and learn about
-the world. Rather than trying to shelter our children from
-life’s inevitable difficulties, we can help them integrate those
-experiences into their understanding of the world and learn
-from them. How our kids make sense of their young lives is
-not only about what happens to them but also about how their
-parents, teachers, and other caregivers respond.
-With that in mind, one of our primary goals has been to make
-The Whole-Brain Child as helpful as possible by giving you
-these specific tools to make your parenting easier and your
-relationships with your children more meaningful. That’s one
-reason roughly half of every chapter is devoted to “What You
-Can Do” sections, where we provide practical suggestions
-and examples of how you can apply the scientific concepts
-from that chapter.
-Also, at the end of each chapter you’ll find two sections
-designed to help you readily implement your new knowledge.
-The first is “Whole-Brain Kids,” written to help you teach
-your children the basics of what we’ve covered in that
-particular chapter. It might seem strange to talk to young
-children about the brain. It is brain science, after all. But
-we’ve found that even small children—as young as four or
-five—really can understand some important basics about the
-way the brain works, and in turn understand themselves and
-their behavior and feelings in new and more insightful ways.
-This knowledge can be very powerful for the child, as well as
-the parent who is trying to teach, to discipline, and to love in
-ways that feel good to both of them. We’ve written the
-“Whole-Brain Kids” sections with a school-age audience in mind, but feel free to adapt the information as you read aloud,
-so that it’s developmentally appropriate for your child.
-
-The other section at the end of each chapter is called
-“Integrating Ourselves.” Whereas most of the book focuses
-on the inner life of your child and the connection between the
-two of you, here we’ll help you apply each chapter’s concepts
-to your own life and relationships. As children develop, their
-brains “mirror” their parent’s brain. In other words, the
-parent’s own growth and development, or lack of those,
-impact the child’s brain. As parents become more aware and
-emotionally healthy, their children reap the rewards and move
-toward health as well. That means that integrating and
-cultivating your own brain is one of the most loving and
-generous gifts you can give your children.
-Another tool we hope you’ll find helpful is the “Ages and
-Stages” chart at the end of the book, where we offer a simple
-summary of how the book’s ideas can be implemented
-according to the age of your child. Each chapter of the book is
-designed to help you put its ideas immediately into practice,
-with multiple suggestions appearing throughout to address
-various ages and stages of childhood development. But to
-make it easier for parents, this final reference section will
-categorize the book’s suggestions according to age and
-development. If you’re the mother of a toddler, for example,
-you can quickly find a reminder of what you can do to
-enhance integration between your child’s left and right brain.
-Then, as your toddler grows, you can come back to the book
-at each age and view a list of the examples and suggestions
-most relevant to your child’s new stage.
-Additionally, just before the “Ages and Stages” section,
-you’ll find a “Refrigerator Sheet” that very briefly highlights the book’s most important points. You can photocopy this
-sheet and place it on the refrigerator, so that you and everyone
-who loves your kids—parents, babysitters, grandparents, and
-so on—can work together on behalf of your children’s overall
-well-being.
-
-As we hope you’ll see, we’re keeping you in mind as we
-work to make this book as accessible and easy to read as
-possible. As scientists, we’ve emphasized precision and
-accuracy; as parents, we’ve aimed for practical understanding.
-And we’ve wrestled with this tension and carefully
-considered how best to provide you with the latest and most
-important information, while doing it in a way that’s clear,
-helpful, and immediately practical. While the book is
-certainly scientifically based, you aren’t going to feel like
-you’re in science class or reading an academic paper. Yes, it’s
-brain science, and we’re absolutely committed to remaining
-true to what research and science demonstrate. But we’ll
-share this information in a way that welcomes you in, rather
-than leaving you out in the cold. We’ve both spent our careers
-taking complicated but vital scientific knowledge about the
-brain and boiling it down so that parents can understand it and
-immediately apply it in their interactions with their kids on a
-daily basis. So don’t be scared off by the brain stuff. We think
-you’ll find it fascinating, and much of the basic information is
-actually pretty simple to understand, as well as easy to use. (If
-you are interested in more of the details of the science behind
-what we’re presenting in these pages, take a look at Dan’s
-books Mindsight and The Developing Mind, 2nd edition.)
-Thanks for joining us on this journey toward a fuller
-knowledge of how you can truly help your kids be happier,
-healthier, and more fully themselves. With an understanding of the brain, you can be more intentional about what you
-teach your kids, how you respond to them, and why. You can
-then do much more than merely survive. By giving your
-children repeated experiences that develop the whole brain,
-you will face fewer everyday parenting crises. But more than
-that, understanding integration will let you know your child
-more deeply, respond more effectively to difficult situations,
-and intentionally build a foundation for a lifetime of love and
-happiness. As a result, not only will your child thrive, both
-now and into adulthood, but you and your whole family will
-as well.
-Please visit us at our website and tell us about your
-whole-brain parenting experiences. We look forward to
-hearing from you.
-Dan and Tina
-www.WholeBrainChild.com
+eerewrew
