--- a/wholeBrain/_chapters/00-ch0.md
+++ b/wholeBrain/_chapters/00-ch0.md
@@ -5,6 +5,76 @@ weight: 0              # field used for sorting in chapters.md
 quiz_id: ch0           # tells the layout which quiz to pull
 ---
 
-### INTRODUCTION:
+### Introduction — “Survive and Thrive”
 
-#### Survive and Thrive:
+The opening to *The Whole-Brain Child* sets the stage by acknowledging the daily chaos of parenting, then reframes those “just-get-through-it” moments as prime opportunities for helping children flourish.
+
+---
+
+#### 1. From Survival to Thriving
+
+| **Survive** | **Thrive** |
+|-------------|------------|
+| Getting through tantrums, sibling fights, homework meltdowns, messes, and sheer exhaustion. | Raising kids who form healthy relationships, act compassionately, work hard, succeed academically, and develop a strong sense of self. |
+
+The authors argue that the very situations parents want to *survive* are the raw material for teaching kids to *thrive*. Each conflict, mess, or emotional storm can be turned into a lesson in empathy, communication, and self-regulation—if adults know how to respond.
+
+---
+
+#### 2. The Core Idea: Integration  
+
+A well-integrated brain:
+
+- **Links left & right hemispheres** (logic + emotion)  
+- **Connects upstairs & downstairs regions** (reflection + instinct)  
+- **Weaves past experiences into present understanding**  
+
+Integrated kids handle adversity better, show greater empathy, and enjoy richer relationships.
+
+---
+
+#### 3. Roadmap of the Book
+
+| **Chapter** | **Focus** | **Goal for the Child** |
+|-------------|-----------|------------------------|
+| 1 | Parenting with the brain in mind | Grasp integration basics |
+| 2 | Left–Right brain linkage | Balance logic and emotion |
+| 3 | Upstairs–Downstairs connection | Build impulse control, empathy, morality |
+| 4 | Making sense of the past | Heal and learn from painful memories |
+| 5 | Mindsight & self-awareness | Pause, reflect, choose responses |
+| 6 | Me + We balance | Foster connectedness without losing individuality |
+
+---
+
+#### 4. Practical Tools You’ll Find
+
+Each chapter devotes roughly half its pages to hands-on strategies:
+
+- **“What You Can Do”** — step-by-step techniques and scripts  
+- **“Whole-Brain Kids”** — child-friendly explanations and activities  
+- **“Integrating Ourselves”** — exercises for the adult’s own growth  
+- **“Ages & Stages” chart** — quick reference for tailoring tactics from birth to 12  
+- **“Refrigerator Sheet”** — one-page cheat sheet for all caregivers  
+
+---
+
+#### 5. Why Brain Science Matters
+
+Understanding basic neuroscience lets caregivers respond intentionally rather than reactively. By repeatedly guiding children through integrated experiences, parents can:
+
+- Reduce day-to-day crises  
+- Deepen parent-child connection  
+- Lay groundwork for lifelong resilience and happiness  
+
+---
+
+#### 6. Key Takeaways
+
+1. **Every survive moment holds a thrive opportunity.**  
+2. **Integration is teachable**—kids’ brains grow through experience.  
+3. **Your own self-development models integration** and directly shapes your child’s brain.  
+4. **Practical, science-based tools** make whole-brain parenting doable in real life.
+
+> *Goal:* Move beyond merely making it to bedtime—equip children (and yourself) to meet life with curiosity, balance, and well-connected minds.
+
+
