--- a/wholeBrain/_chapters/01-ch1.md
+++ b/wholeBrain/_chapters/01-ch1.md
@@ -4,25 +4,64 @@ title:  "Chapter 1 – Parenting with the Brain in Mind"
 weight: 1
 ---
 
-## Key Concept: Left vs Right Brain
-The left brain loves **logic**, while the right brain handles **emotions**.
+
+### Chapter 1 — Parenting with the Brain in Mind
+
+*The Whole-Brain Child* opens by noting that most caregivers master the basics of children’s bodies (fever, nutrition, safety) yet often overlook the organ that drives behavior, learning, and relationships: the brain. Understanding even a handful of brain fundamentals can make everyday parenting both easier and more meaningful.
+
+---
+
+#### Why Learning About the Brain Matters
+- The brain shapes **discipline, decision-making, empathy, school success, self-esteem, and relationships**.  
+- Because experience literally sculpts neural wiring, what parents do day-to-day **changes the brain’s structure** and a child’s future resilience.
+
+---
+
+#### Marco’s Story: Integration in Action
+When two-year-old Marco survived a car accident, his mother Marianna let him **retell the story repeatedly** (“Eea woo woo”) instead of distracting him. By blending:
+1. **Right-brain emotion** (fear, images, bodily sensations)  
+2. **Left-brain logic** (facts, sequence, language)  
+
+she helped him process the event, defuse lingering fear, and return to typical development—an early demonstration of “whole-brain” parenting.
+
+---
+
+#### What Is *Integration*?
+Integration is the **linking of separate brain regions** so they work together as a coordinated whole.  
+- **Horizontal**: left logic + right emotion  
+- **Vertical**: “upstairs” reflective cortex + “downstairs” instinctual brainstem / limbic areas  
+- Additional links connect memory, moral reasoning, and social circuits.
+
+When integration is strong, children are **flexible, adaptive, stable, self-aware, and empathic**. When it fails, behavior slides toward:
+
+- **Chaos** – overwhelming emotions, tantrums, confusion  
+- **Rigidity** – inflexible rules, stubbornness, over-control  
+
+An integrated mind stays in the “river of well-being,” avoiding both chaotic rapids and rigid stagnation.
 
 ---
 
 ### Checkpoint 1  
 {% include quiz.html id="ch1_q1" %}   <!-- quiz right here -->
 
----
-
-## The Upstairs / Downstairs Brain
-Your child's “downstairs brain” is responsible for fight‑or‑flight reactions,
-while the “upstairs brain” plans, reasons, and shows empathy.
-
----
-
-### Checkpoint 2  
-{% include quiz.html id="ch1_q2" %}   <!-- another quiz here -->
+#### Neuroplasticity: Brains Are Moldable
+- Modern imaging confirms that **neurons firing together grow new connections**—throughout life, not just in childhood.  
+- Everyday experiences—storytelling, music, sports, screens, friendships—*wire and re-wire* neural circuits.  
+- Parents can therefore **cultivate integration** by guiding attention, emotion, and behavior in daily moments.
 
 ---
 
-Continue the chapter as normal…
+#### Practical Implications for Parents
+- **Name and tame**: help kids put words and logic to big feelings.  
+- **Use survival moments** (tantrums, fights, fears) as teachable opportunities to connect brain regions.  
+- **Model integration** yourself; children’s brains “mirror” the emotional balance or imbalance they observe.  
+- Provide varied, supportive experiences—conversation, play, challenge, rest—to exercise every part of the child’s developing brain.
+
+---
+
+#### Key Takeaways
+1. The brain is experience-dependent; parenting literally shapes wiring.  
+2. **Integration**, not perfection, is the goal—linking logic, emotion, instinct, and reflection.  
+3. Guiding kids back from chaos or rigidity toward the “river of well-being” builds lifelong mental health.  
+4. With simple, science-informed strategies, everyday interactions can nurture a resilient, whole-brain child.
+
