fixed formatting of chicken site

--- a/chickenGuide/_chapters/00-ch0.md
+++ b/chickenGuide/_chapters/00-ch0.md
@@ -9,13 +9,6 @@ quiz_id: ch0           # tells the layout which quiz to pull
 
 <img src="../../assets/images/hen.png" style="width: 100px;" alt="Description of image">
 
-#### Survive and Thrive:
-With your chickens
+### Checkpoint 1  
+{% include quiz.html id="ch1_q1" %} 
 
-### Quiz:
-
-fkldjgkdfkjlgjkldfj
-
-{% include quiz.html id=page.quiz_id %}
-
-eerewrew
