--- a/chickenGuide/_chapters/08-ch8.md
+++ b/chickenGuide/_chapters/08-ch8.md
@@ -1,6 +1,8 @@
 ---
 layout: chapter        # <‑‑ use the new chapter layout
-title: "Chapter 7 - Breeding Chickens – Embryo to Full-Bred"
+title: "Chapter 8 - Breeding Chickens – Embryo to Full-Bred"
 weight: 8              # field used for sorting in chapters.md
 quiz_id: ch8           # tells the layout which quiz to pull
 ---
+
+dfgsdgfdhfdghwgrwgfsg
