--- a/chickenGuide/_chapters/10-ch10.md
+++ b/chickenGuide/_chapters/10-ch10.md
@@ -4,3 +4,5 @@ title: "Chapter 10 - Even More About Chickens, All Varieties And Species"
 weight: 10              # field used for sorting in chapters.md
 quiz_id: ch10           # tells the layout which quiz to pull
 ---
+
+Chapter 10
